# nmr2mf

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cron.yaml  dockerpublish.yaml  pythonapplication.yaml
awesome_app/: __init__.py  __main__.py
nmr2mf/: __main__.py  utils.py
