[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.poetry]
authors = ["Kon"]
description = "A template for Python applications"
exclude = ["tests"]
license = "MIT License"
name = "awesome-application"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.4"
pytest-black = "^0.3.12"
pytest-cov = "^2.12.0"
pytest-flake8 = "^1.0.7"
pytest-isort = "^2.0.0"
pytest-mock = "^3.6.1"
pytest-mypy = "^0.8.1"
pytest-pydocstyle = "^2.2.0"

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--cov=./",
  "--cov-report=xml",
  "--doctest-modules",
  "--flake8",
  "--isort",
  "--mypy",
  "--pydocstyle",
]
